k8-deployment-data-quality.yaml
# deployment
# webserver deployment yaml with envs
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ondc-open-data
  name: open-data-webserver-data-quality-deployment
  labels:
    app: open-data-webserver-data-quality
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: open-data-webserver-data-quality
  template:
    metadata:
      labels:
        app: open-data-webserver-data-quality
    spec:
      containers:
        - name: open-data-webserver-data-quality
          image: 568130295144.dkr.ecr.ap-south-1.amazonaws.com/ondc-open-data-web-app:webserverv6a1b1b0
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "500Mi"
              cpu: "250m"
            limits:
              memory: "500Mi"
              cpu: "250m"

---
# webserver service yaml
apiVersion: v1
kind: Service
metadata:
  name: open-data-webserver-service-data-quality
  namespace: ondc-open-data
spec:
  selector:
    app: open-data-webserver-data-quality
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: NodePort
