k8-deployment.yaml
# deployment
# webserver deployment yaml with envs
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ondc-open-data
  name: open-data-webserver-deployment
  labels:
    app: open-data-webserver
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: open-data-webserver
  template:
    metadata:
      labels:
        app: open-data-webserver
    spec:
      containers:
        - name: open-data-webserver
          image: 568130295144.dkr.ecr.ap-south-1.amazonaws.com/ondc-open-data-web-app:webserverv4
          ports:
            - containerPort: 8001
          resources:
            requests:
              memory: "500Mi"
              cpu: "250m"
            limits:
              memory: "500Mi"
              cpu: "250m"

---
# webserver service yaml
apiVersion: v1
kind: Service
metadata:
  name: open-data-webserver-service
  namespace: ondc-open-data
spec:
  selector:
    app: open-data-webserver
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
  type: NodePort
